調整跳轉連結

--- a/burger.html
+++ b/burger.html
@@ -36,7 +36,7 @@
                         <a href="#">關於品牌</a>
                     </li>
                     <li>
-                        <a href="#">美味料理</a>
+                        <a href="./food.html">美味料理</a>
                     </li>
                     <li>
                         <a href="#">啤酒介紹</a>
