--- a/footer.html
+++ b/footer.html
@@ -154,7 +154,7 @@
         <div class="footer txt">
             <ul>
                 <li>
-                    <a href="#">美味料理</a>
+                    <a href="./food.html">美味料理</a>
                 </li>
                 <li>
                     <a href="./takeout.html">我要外帶</a>
