--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a href="#">關於品牌</a>
                     </li>
                     <li>
-                        <a href="#">美味料理</a>
+                        <a href="./food.html">美味料理</a>
                     </li>
                     <li>
                         <a href="#">啤酒介紹</a>
@@ -309,7 +309,7 @@
         <div class="footer txt">
             <ul>
                 <li>
-                    <a href="#">美味料理</a>
+                    <a href="./food.html">美味料理</a>
                 </li>
                 <li>
                     <a href="./takeout.html">我要外帶</a>
