--- a/news.html
+++ b/news.html
@@ -39,7 +39,7 @@
                         <a href="#">關於品牌</a>
                     </li>
                     <li>
-                        <a href="#">美味料理</a>
+                        <a href="./food.html">美味料理</a>
                     </li>
                     <li>
                         <a href="#">啤酒介紹</a>
@@ -155,7 +155,7 @@
         <div class="footer txt">
             <ul>
                 <li>
-                    <a href="#">美味料理</a>
+                    <a href="./food.html">美味料理</a>
                 </li>
                 <li>
                     <a href="./takeout.html">我要外帶</a>
