調整跳轉連結

--- a/takeout.html
+++ b/takeout.html
@@ -91,7 +91,7 @@
     </div>
     <div class="description">
         <p>
-            內用菜單請點擊 <a href="#">Menu</a>
+            內用菜單請點擊 <a href="./food.html">Menu</a>
         </p>
         <p>
             可外帶餐點如下方清單，外帶滿2000元即贈5張小麥啤酒券
