新增頁面及修改跳轉連結

--- a/booking.html
+++ b/booking.html
@@ -42,7 +42,7 @@
                         <a href="./food.html">美味料理</a>
                     </li>
                     <li>
-                        <a href="#">啤酒介紹</a>
+                        <a href="./classic-beer.html">啤酒介紹</a>
                     </li>
                     <li>
                         <a href="./takeout.html">我要外帶</a>
@@ -189,7 +189,7 @@
                         <a href="./news.html">最新消息</a>
                     </li>
                     <li>
-                        <a href="#">關於品牌</a>
+                        <a href="./classic-beer.html">關於品牌</a>
                     </li>
                     <li>
                         <a href="location.html">美味據點</a>
