--- a/burger.html
+++ b/burger.html
@@ -39,7 +39,7 @@
                         <a href="./food.html">美味料理</a>
                     </li>
                     <li>
-                        <a href="#">啤酒介紹</a>
+                        <a href="./classic-beer.html">啤酒介紹</a>
                     </li>
                     <li>
                         <a href="./takeout.html">我要外帶</a>
