--- a/classic-beer.html
+++ b/classic-beer.html
@@ -7,7 +7,7 @@
     <title>Miu Beer 喵啤 | 精釀啤酒 | 經典傳奇</title>
     <!-- style -->
     <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/news.css">
+    <link rel="stylesheet" href="./styles/classic-beer.css">
     <!-- fontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -69,9 +69,6 @@
     <!-- 立即訂位結束 -->
     <!-- 頂端logo與購物車開始 -->
     <div class="top">
-        <div class="top-mask">
-            <span>Don't Worry Beer Happy ♡</span>
-        </div>
         <a href="index.html">
             <img class="logo" src="./images/miu_logo_gold.svg" alt="Miu Beer">
         </a>
@@ -82,69 +79,97 @@
         </div>
     </div>
     <!-- 頂端logo與購物車結束 -->
-    <!-- 內文區開始 -->
-    <div class="news-mask">
+    <!-- 頂部大標題 -->
+    <div class="top">
         <h1>
-            NEWS
-            <span>最新消息</span>
+            CLASSIC BEER
         </h1>
     </div>
-    <div class="news-card-container">
-        <div class="news-card">
-            <a href="#">
-                <img src="./images/news_cup.png" alt="上班族小確幸">
-                <span>
-                    上班族小確幸！平日午餐來店
-                    享小杯啤酒任選一杯，聚會首選 Miu Beer！
-                </span>
-            </a>
-            <div class="hot"><span>HOT</span></div>
+    <div class="main">
+        <div class="bow">
+            <img src="./images/bow.svg" alt="標題底圖">
+            <h2>淡色拉格啤酒</h2>
         </div>
-        <div class="news-card">
-            <a href="#">
-                <img src="./images/news_craftbeer.png" alt="精釀啤酒">
-                <span>
-                    一塊體驗精釀啤酒的奧妙吧!
-                </span>
-            </a>
-        </div>
-        <div class="news-card">
-            <a href="#">
-                <img src="./images/news_friend.png" alt="好友推薦">
-                <span>
-                    好友揪好友，一起涼一下！
-                </span>
-            </a>
-            <div class="new"><span>NEW</span></div>
-        </div>
-        <div class="news-card">
-            <a href="#">
-                <img src="./images/news_chill.png" alt="商業午餐">
-                <span>
-                    上班辛苦了！平日午間提供商業午餐，一起chill一下！
-                </span>
-            </a>
-        </div>
-        <div class="news-card">
-            <a href="news-page.html">
-                <img src="./images/news_beercup.png" alt="啤酒大賽">
-                <span>
-                    每週五晚間八點，參加啤酒大賽，第一名可得啤酒券套票組喲！
-                </span>
-            </a>
-            <div class="hot"><span>HOT</span></div>
-        </div>
-        <div class="news-card">
-            <a href="#">
-                <img src="./images/news_beerflower.png" alt="啤酒花">
-                <span>
-                    你知道嗎?啤酒花其實不是花！
-                </span>
-            </a>
+        <section>
+            <div class="side-beer">
+                <img class="" src="./images/beer_set_pa.png" alt="啤酒示意圖">
+            </div>
+            <!-- 中間內容區 -->
+            <div class="content">
+                <div class="info-container">
+                    <ul class="info">
+                        <li>麥芽香氣/爽口/乾淨/經典</li>
+                        <li>德國南部慕尼黑（München）傳統的淡色啤酒， 「拉格Lager」德文為儲存的意思，我們的拉格啤 酒在發酵槽中長時間熟成，使風味更成熟圓潤。</li>
+                        <li><span>酒精濃度：4.9%</span></li>
+                    </ul>
+                    <ul class="side-info">
+                        <li>苦度低
+                            <span class="active"></span>
+                            <span></span>
+                            <span></span>
+                            高
+                        </li>
+                        <li>酒體 輕盈
+                            <span class="active"></span>
+                            <span></span>
+                            <span></span>
+                            豐滿
+                        </li>
+                        <li>酒色淡
+                            <span class="active"></span>
+                            <span></span>
+                            <span></span>
+                            深
+                        </li>
+                    </ul>
+                </div>
+                <div class="icon">
+                    <a href="#" class="arrow">
+                        <i class="fa-solid fa-angle-left"></i>
+                    </a>
+                    <div class="medal">
+                        <img src="./images/classic_AIBA.png" alt="2017AIBA">
+                        <img src="./images/classic_AIBA_gold.png" alt="2018AIBA">
+                        <img src="./images/classic_WBA.png" alt="2019WBA">
+                    </div>
+                    <a href="#" class="arrow">
+                        <i class="fa-solid fa-angle-right"></i>
+                    </a>
+                </div>
+                <div class="more">
+                    <a href="#">了解更多</a>
+                </div>
+            </div>
+            <!-- 下方啤酒區 -->
+        </section>
+        <div class="beer-container">
+            <div class="beer">
+                <div class="pic active">
+                    <img src="./images/beer_set_pa.png" alt="淡色拉格啤酒">
+                    <div class="txt">淡色拉格啤酒</div>
+                </div>
+                <div class="pic">
+                    <img src="./images/beer_set_pi.png" alt="皮爾森啤酒">
+                    <div class="txt">皮爾森啤酒</div>
+                </div>
+                <div class="pic">
+                    <img src="./images/beer_set_sa.png" alt="淡色艾爾啤酒">
+                    <div class="txt">淡色艾爾啤酒</div>
+                </div>
+                <div class="pic">
+                    <img src="./images/beer_set_st.png" alt="司陶特啤酒">
+                    <div class="txt">司陶特啤酒</div>
+                </div>
+                <div class="pic">
+                    <img src="./images/beer_set_we.png" alt="小麥啤酒">
+                    <div class="txt">小麥啤酒</div>
+                </div>
+            </div>
+            <div class="btn">
+                <a href="./index.html">返回首頁</a>
+            </div>
         </div>
     </div>
-    <!-- 內文區結束 -->
-
     <!-- footer開始 -->
     <footer>
         <div class="footer-pic">
