--- a/food.html
+++ b/food.html
@@ -42,7 +42,7 @@
                         <a href="./food.html">美味料理</a>
                     </li>
                     <li>
-                        <a href="#">啤酒介紹</a>
+                        <a href="./classic-beer.html">啤酒介紹</a>
                     </li>
                     <li>
                         <a href="./takeout.html">我要外帶</a>
@@ -120,7 +120,7 @@
         <div class="beer-container">
             <div class="beer">
                 <div class="pic">
-                    <img src="./images/beer_set_pa.png" alt="">
+                    <img src="./images/beer_set_pa.png" alt="淡色拉格啤酒">
                 </div>
                 <div class="txt">
                     <i class="fa-solid fa-thumbs-up">
@@ -131,7 +131,7 @@
             </div>
             <div class="beer">
                 <div class="pic">
-                    <img src="./images/beer_set_pi.png" alt="">
+                    <img src="./images/beer_set_pi.png" alt="皮爾森啤酒">
                 </div>
                 <div class="txt">
                     <i class="fa-solid fa-thumbs-up">
@@ -142,7 +142,7 @@
             </div>
             <div class="beer">
                 <div class="pic">
-                    <img src="./images/beer_set_sa.png" alt="">
+                    <img src="./images/beer_set_sa.png" alt="淡色艾爾啤酒">
                 </div>
                 <div class="txt">
                     <i class="fa-solid fa-thumbs-up">
@@ -153,7 +153,7 @@
             </div>
             <div class="beer">
                 <div class="pic">
-                    <img src="./images/beer_set_st.png" alt="">
+                    <img src="./images/beer_set_st.png" alt="司陶特啤酒">
                 </div>
                 <div class="txt">
                     <i class="fa-solid fa-thumbs-up">
@@ -164,7 +164,7 @@
             </div>
             <div class="beer">
                 <div class="pic">
-                    <img src="./images/beer_set_we.png" alt="">
+                    <img src="./images/beer_set_we.png" alt="小麥啤酒">
                 </div>
                 <div class="txt">
                     <i class="fa-solid fa-thumbs-up">
@@ -306,7 +306,7 @@
                     <a href="./takeout.html">我要外帶</a>
                 </li>
                 <li>
-                    <a href="#">啤酒介紹</a>
+                    <a href="./classic-beer.html">啤酒介紹</a>
                 </li>
                 <li>
                     <a href="./news.html">最新消息</a>
