--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
         <!-- 活動卡片區按鈕結束 -->
         <div class="news-card">
-            <a href="#">
+            <a href="./news.html">
                 <div class="card-pic">
                     <img src="./images/index_newscele.png" alt="">
                 </div>
@@ -131,7 +131,7 @@
             </a>
         </div>
         <div class="news-card">
-            <a href="#">
+            <a href="./news.html">
                 <div class="card-pic">
                     <img src="./images/index_newsfriends.png" alt="">
                 </div>
@@ -147,7 +147,7 @@
             </a>
         </div>
         <div class="news-card">
-            <a href="#">
+            <a href="./news-page.html">
                 <div class="card-pic">
                     <img src="./images/index_newsbeer.png" alt="">
                 </div>
@@ -197,7 +197,7 @@
         </div>
         <!-- 食物卡片區按鈕結束 -->
         <div class="food-card">
-            <a href="#">
+            <a href="./food.html">
                 <div class="card-pic">
                     <img src="./images/index_potato.png" alt="">
                 </div>
@@ -212,7 +212,7 @@
         </div>
         </a>
         <div class="food-card">
-            <a href="#">
+            <a href="./food.html">
                 <div class="card-pic">
                     <img src="./images/index_greenchicken.png" alt="">
                 </div>
@@ -227,7 +227,7 @@
             </a>
         </div>
         <div class="food-card">
-            <a href="#">
+            <a href="./food.html">
                 <div class="card-pic">
                     <img src="./images/index_fish.png" alt="">
                 </div>
