--- a/footer.html
+++ b/footer.html
@@ -160,7 +160,7 @@
                     <a href="./takeout.html">我要外帶</a>
                 </li>
                 <li>
-                    <a href="#">啤酒介紹</a>
+                    <a href="./classic-beer.html">啤酒介紹</a>
                 </li>
                 <li>
                     <a href="./news.html">最新消息</a>
