--- a/location.html
+++ b/location.html
@@ -42,7 +42,7 @@
                         <a href="./food.html">美味料理</a>
                     </li>
                     <li>
-                        <a href="#">啤酒介紹</a>
+                        <a href="./classic-beer.html">啤酒介紹</a>
                     </li>
                     <li>
                         <a href="./takeout.html">我要外帶</a>
@@ -156,7 +156,7 @@
                     <a href="./takeout.html">我要外帶</a>
                 </li>
                 <li>
-                    <a href="#">啤酒介紹</a>
+                    <a href="./classic-beer.html">啤酒介紹</a>
                 </li>
                 <li>
                     <a href="./news.html">最新消息</a>
