--- a/booking.html
+++ b/booking.html
@@ -36,7 +36,7 @@
                 </div>
                 <ul>
                     <li>
-                        <a href="#">關於品牌</a>
+                        <a href="./aboutus.html">關於品牌</a>
                     </li>
                     <li>
                         <a href="./food.html">美味料理</a>
@@ -183,13 +183,13 @@
                         <a href="./takeout.html">我要外帶</a>
                     </li>
                     <li>
-                        <a href="#">啤酒介紹</a>
+                        <a href="./classic-beer.html">啤酒介紹</a>
                     </li>
                     <li>
                         <a href="./news.html">最新消息</a>
                     </li>
                     <li>
-                        <a href="./classic-beer.html">關於品牌</a>
+                        <a href="./aboutus.html">關於品牌</a>
                     </li>
                     <li>
                         <a href="location.html">美味據點</a>
