--- a/burger.html
+++ b/burger.html
@@ -33,7 +33,7 @@
                 </div>
                 <ul>
                     <li>
-                        <a href="#">關於品牌</a>
+                        <a href="./aboutus.html">關於品牌</a>
                     </li>
                     <li>
                         <a href="./food.html">美味料理</a>
