--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                 </div>
                 <ul>
                     <li>
-                        <a href="#">關於品牌</a>
+                        <a href="./aboutus.html">關於品牌</a>
                     </li>
                     <li>
                         <a href="./food.html">美味料理</a>
                     </li>
                     <li>
-                        <a href="#">啤酒介紹</a>
+                        <a href="./classic-beer.html">啤酒介紹</a>
                     </li>
                     <li>
                         <a href="./takeout.html">我要外帶</a>
@@ -53,7 +53,7 @@
                         <a href="./news.html">最新消息</a>
                     </li>
                     <li>
-                        <a href="location.html">美味據點</a>
+                        <a href="./location.html">美味據點</a>
                     </li>
                 </ul>
             </div>
@@ -291,7 +291,7 @@
         </div>
         <div class="know-btn">
             <div class="btn">
-                <a href="#" target="_blank">
+                <a href="./classic-beer.html">
                     點我了解更多 Miu Beer ...
                     <i class="fa-solid fa-arrow-up-right-from-square"></i>
                 </a>
@@ -315,16 +315,16 @@
                     <a href="./takeout.html">我要外帶</a>
                 </li>
                 <li>
-                    <a href="#">啤酒介紹</a>
+                    <a href="./classic-beer.html">啤酒介紹</a>
                 </li>
                 <li>
                     <a href="./news.html">最新消息</a>
                 </li>
                 <li>
-                    <a href="#">關於品牌</a>
+                    <a href="./aboutus.html">關於品牌</a>
                 </li>
                 <li>
-                    <a href="location.html">美味據點</a>
+                    <a href="./location.html">美味據點</a>
                 </li>
             </ul>
         </div>
