--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -36,7 +36,7 @@
                 </div>
                 <ul>
                     <li>
-                        <a href="#">關於品牌</a>
+                        <a href="./aboutus.html">關於品牌</a>
                     </li>
                     <li>
                         <a href="./food.html">美味料理</a>
@@ -52,7 +52,7 @@
                         <a href="./news.html">最新消息</a>
                     </li>
                     <li>
-                        <a href="location.html">美味據點</a>
+                        <a href="./location.html">美味據點</a>
                     </li>
                 </ul>
             </div>
@@ -229,10 +229,10 @@
                     <a href="./news.html">最新消息</a>
                 </li>
                 <li>
-                    <a href="#">關於品牌</a>
+                    <a href="./aboutus.html">關於品牌</a>
                 </li>
                 <li>
-                    <a href="location.html">美味據點</a>
+                    <a href="./location.html">美味據點</a>
                 </li>
             </ul>
         </div>
