--- a/takeout.html
+++ b/takeout.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="./styles/takeout.css">
     <!-- fontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./images/miu.ico" />
 </head>
 
 <body>
