更新字體 修改css共用版

--- a/footer.html
+++ b/footer.html
@@ -166,7 +166,7 @@
                     <a href="./news.html">最新消息</a>
                 </li>
                 <li>
-                    <a href="./aboutus.html">關於品牌</a>
+                    <a href="">關於品牌</a>
                 </li>
                 <li>
                     <a href="location.html">美味據點</a>
