--- a/location.html
+++ b/location.html
@@ -7,6 +7,7 @@
     <title>Miu Beer 喵啤 | 精釀啤酒 | 經典傳奇</title>
     <!-- style -->
     <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/all.css">
     <link rel="stylesheet" href="./styles/location.css">
     <!-- fontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -30,7 +31,7 @@
                     <span>Menu</span>
                 </div>
             </label>
-            <div class="menu-list">
+            <nav class="menu-list">
                 <div class="menu-logo">
                     <a href="index.html" target="_blank">
                         <img src="./images/miu_logo_gold.svg" alt="Miu Beer">
@@ -57,7 +58,7 @@
                         <a href="./location.html">美味據點</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
     </header>
     <!-- 漢堡選單結束 -->
