--- a/takeout.html
+++ b/takeout.html
@@ -7,6 +7,7 @@
     <title>Miu Beer 喵啤 | 精釀啤酒 | 經典傳奇</title>
     <!-- style -->
     <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/all.css">
     <link rel="stylesheet" href="./styles/takeout.css">
     <!-- fontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
