--- a/burger.html
+++ b/burger.html
@@ -25,7 +25,7 @@
                     <span>Menu</span>
                 </div>
             </label>
-            <div class="menu-list">
+            <nav class="menu-list">
                 <div class="menu-logo">
                     <a href="index.html" target="_blank">
                         <img src="./logo/miu_logo_gold.svg" alt="Miu Beer">
@@ -52,7 +52,7 @@
                         <a href="location.html">美味據點</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
     </header>
     <!-- 漢堡選單結束 -->
