更新跑馬燈 調整footer

--- a/aboutus.html
+++ b/aboutus.html
@@ -83,6 +83,9 @@
     </div>
     <!-- 頂端logo與購物車結束 -->
     <!-- 上半部 -->
+    <div class="marquee">
+        <p>店長Miumiu上班時間:週一至週五 15:00~20:00 微服出巡，喜愛貓咪的您不要錯過囉！</p>
+    </div>
     <section class="container">
         <div class="slogn">
             <div class="txt">
@@ -132,7 +135,7 @@
                         『MIU BEERHOUSE 喵 啤酒餐廳』、
                         『MIU YAKINIKU 喵 燒肉屋』。
                         12款啤酒從工廠新鮮直送，配上豐富的美味料理，
-                        綻出啤酒多元生活享受，引領全新時尚飲酒態度！
+                        綻出啤酒多元生活享受，<br>引領全新時尚飲酒態度！
                     </p>
                 </div>
                 <div class="pic cat">
@@ -178,7 +181,7 @@
         <h2>OUR STORY</h2>
         <div class="pic">
             <img class="staff" src="./images/about_story.png" alt="職人精神">
-            <img class=cat src="./images/about_stories.png" alt="傳奇精釀">
+            <img class="staffoneman" src="./images/about_stories.png" alt="傳奇精釀">
         </div>
         <div class="circle">
             <label for="switch">
