--- a/booking.html
+++ b/booking.html
@@ -81,6 +81,9 @@
             </a>
         </div>
         <!-- 頂端logo與購物車結束 -->
+        <div class="marquee">
+            <p>即日起，平日午餐來店享小杯啤酒任選一杯</p>
+        </div>
         <!-- 地址表單區 -->
         <article>
             <h1>RESERVATION</h1>
