--- a/classic-beer.html
+++ b/classic-beer.html
@@ -82,6 +82,9 @@
         </div>
     </div>
     <!-- 頂端logo與購物車結束 -->
+    <div class="marquee">
+        <p>即日起，平日午餐來店享小杯啤酒任選一杯</p>
+    </div>
     <!-- 頂部大標題 -->
     <div class="top">
         <h1>
@@ -102,7 +105,7 @@
                 <div class="info-container">
                     <ul class="info">
                         <li>麥芽香氣/爽口/乾淨/經典</li>
-                        <li>德國南部慕尼黑（München）傳統的淡色啤酒， 「拉格Lager」德文為儲存的意思，我們的拉格啤 酒在發酵槽中長時間熟成，使風味更成熟圓潤。</li>
+                        <li>德國南部慕尼黑（München）傳統的淡色啤酒， 「拉格Lager」德文為儲存的意思，我們的拉格啤酒在發酵槽中長時間熟成，使風味更成熟圓潤。</li>
                         <li><span>酒精濃度：4.9%</span></li>
                     </ul>
                     <ul class="side-info">
