--- a/food.html
+++ b/food.html
@@ -83,7 +83,7 @@
     </div>
     <!-- 頂端logo與購物車結束 -->
     <!-- 圖片跑馬燈區 -->
-    <div class="marquee">
+    <div class="picmarquee">
         <div class="view">
             <div class="pic-container">
                 <div class="pic">
