--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
     </div>
     <!-- 立即訂位結束 -->
     <!----------- 首頁_banner ---------->
-    <!-- 需要再補跑馬燈.marquee -->
+    <div class="marquee">
+        <p>店長Miumiu上班時間:週一至週五 15:00~20:00 微服出巡，喜愛貓咪的您不要錯過囉！</p>
+    </div>
     <div class="top">
         <div class="top-mask"></div>
         <a href="index.html">
