--- a/news.html
+++ b/news.html
@@ -70,6 +70,10 @@
         </a>
     </div>
     <!-- 立即訂位結束 -->
+    <!-- 跑馬燈區 -->
+    <div class="marquee">
+        <p>即日起，平日午餐來店享小杯啤酒任選一杯</p>
+    </div>
     <!-- 頂端logo、banner與購物車開始 -->
     <div class="top">
         <div class="top-mask">
