--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -82,6 +82,9 @@
         </div>
     </div>
     <!-- 頂端logo與購物車結束 -->
+    <div class="marquee">
+        <p>外帶滿2000元即贈5張小麥啤酒券</p>
+    </div>
     <!-- 購物車內容區 -->
     <div class="cart-container">
         <i class="fa-solid fa-cart-shopping">
