--- a/location.html
+++ b/location.html
@@ -82,6 +82,9 @@
         </div>
     </div>
     <!-- 頂端logo與購物車結束 -->
+    <div class="marquee">
+        <p>即日起，平日午餐來店享小杯啤酒任選一杯</p>
+    </div>
     <!-- 地址區 -->
     <article>
         <h1>
