--- a/aboutus.html
+++ b/aboutus.html
@@ -86,6 +86,10 @@
     <div class="marquee">
         <p>店長Miumiu上班時間:週一至週五 15:00~20:00 微服出巡，喜愛貓咪的您不要錯過囉！</p>
     </div>
+    <ol class="path">
+        <li><a href="./index.html">首頁</a></li>
+        <li><a href="./aboutus.html">關於我們</a></li>
+    </ol>
     <section class="container">
         <div class="slogn">
             <div class="txt">
