--- a/booking.html
+++ b/booking.html
@@ -84,6 +84,10 @@
         <div class="marquee">
             <p>即日起，平日午餐來店享小杯啤酒任選一杯</p>
         </div>
+        <ol class="path">
+            <li><a href="./index.html">首頁</a></li>
+            <li><a href="./booking.html">立即訂位</a></li>
+        </ol>
         <!-- 地址表單區 -->
         <article>
             <h1>RESERVATION</h1>
