--- a/food.html
+++ b/food.html
@@ -82,6 +82,10 @@
         </div>
     </div>
     <!-- 頂端logo與購物車結束 -->
+    <ol class="path">
+        <li><a href="./index.html">首頁</a></li>
+        <li><a href="./food.html">美味料理</a></li>
+    </ol>
     <!-- 圖片跑馬燈區 -->
     <div class="picmarquee">
         <div class="view">
