--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -85,6 +85,10 @@
     <div class="marquee">
         <p>外帶滿2000元即贈5張小麥啤酒券</p>
     </div>
+    <ol class="path">
+        <li><a href="./index.html">首頁</a></li>
+        <li><a href="./shopping-cart.html">購物車</a></li>
+    </ol>
     <!-- 購物車內容區 -->
     <div class="cart-container">
         <i class="fa-solid fa-cart-shopping">
