--- a/classic-beer.html
+++ b/classic-beer.html
@@ -85,6 +85,10 @@
     <div class="marquee">
         <p>即日起，平日午餐來店享小杯啤酒任選一杯</p>
     </div>
+    <ol class="path">
+        <li><a href="./index.html">首頁</a></li>
+        <li><a href="./classic-beer.html">啤酒介紹</a></li>
+    </ol>
     <!-- 頂部大標題 -->
     <div class="top">
         <h1>
