--- a/location.html
+++ b/location.html
@@ -85,6 +85,10 @@
     <div class="marquee">
         <p>即日起，平日午餐來店享小杯啤酒任選一杯</p>
     </div>
+    <ol class="path">
+        <li><a href="./index.html">首頁</a></li>
+        <li><a href="./location.html">美味據點</a></li>
+    </ol>
     <!-- 地址區 -->
     <article>
         <h1>
