--- a/news.html
+++ b/news.html
@@ -96,6 +96,10 @@
             <span>最新消息</span>
         </h1>
     </div>
+    <ol class="path">
+        <li><a href="./index.html">首頁</a></li>
+        <li><a href="./news.html">最新消息</a></li>
+    </ol>
     <div class="news-card-container">
         <div class="news-card">
             <a href="#">
