調整跑馬燈

--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -82,13 +82,6 @@
         </div>
     </div>
     <!-- 頂端logo與購物車結束 -->
-    <div class="marquee">
-        <p>外帶滿2000元即贈5張小麥啤酒券</p>
-    </div>
-    <ol class="path">
-        <li><a href="./index.html">首頁</a></li>
-        <li><a href="./shopping-cart.html">購物車</a></li>
-    </ol>
     <!-- 購物車內容區 -->
     <div class="cart-container">
         <i class="fa-solid fa-cart-shopping">
@@ -156,7 +149,7 @@
         <form action="#" target="_self">
             <div>
                 <label for="name" required>
-                    訂購人姓名:
+                    訂購姓名:
                     <input type="text" id="name">
                 </label>
             </div>
