--- a/index.html
+++ b/index.html
@@ -234,7 +234,6 @@
         </a>
     </div>
     <!-- 食物卡片區結束 -->
-
     <!-- 底部知識區開始 -->
     <article>
         <h2>
@@ -253,10 +252,11 @@
                         啤酒最早起源於中東美索不達米亞平原蘇美爾人聚集地，如果算上他們種植和培育啤酒重要原料-大麥的時間，距今約有8000年歷史，但遺憾的是如今整個中東都不再飲酒了。
                     </p>
                     <h3>
-                        2. 修金字塔的工錢是啤酒
+                        2. 不同國家的啤酒有哪些不同的特色呢？
                     </h3>
                     <p>
-                        古代埃及修金字塔的工人每天的工資為：4升啤酒，兩大塊面包！
+                        每個國家的手工啤酒，因為水質、氣候等環境條件的不同，也各自形塑出獨樹一格的精釀啤酒。
+                        美式精釀的酒花濃郁，德式精釀的清爽俐落，英式啤酒非常講究香氣層次，比利時啤酒風味繽紛
                     </p>
                 </div>
             </div>
@@ -266,10 +266,11 @@
                 </div>
                 <div class="txt">
                     <h3>
-                        3. 歷史上，男性不準釀造啤酒！
+                        3. 什麼是精釀啤酒？
                     </h3>
                     <p>
-                        在古埃及和中東地區，最早規定了必須是女性才能釀造啤酒，男性不能從事釀造和銷售工作。後來產業規模化後，也是埃及規定了男性可以參與釀酒行業。
+                        精釀啤酒和一般常見的商業啤酒，最主要差別就在成份，以及釀製方式。
+                        美國釀酒師協會定義「手工精釀啤酒」為：產量少、獨立製造、以傳統手法釀酒。
                     </p>
                     <h3>
                         4. 啤酒花是大麻的親戚
@@ -338,7 +339,7 @@
     <div class="warning-box">
         <div class="warning-box-txt">
             <p class="drink"><span>禁止</span>酒駕 未滿十八歲 禁止飲酒</p>
-            <p class="tibame">本網站為緯育TibaMe前端工程師班第85期學員專題作品，本平台僅供學習、展示之用。參考網站: 柏克金/台灣啤酒/百事可樂</p>
+            <p class="tibame">本網站為緯育TibaMe前端工程師班第86期學員專題作品，本平台僅供學習、展示之用。參考網站: 柏克金/台灣啤酒/百事可樂</p>
         </div>
     </div>
     <!-- footer結束 -->
